extension images modified

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
   </div>
 </header>
-<section id="fh5co-home" data-section="home" style="background-image: url(images/Sesion1.jpg); background-position: 0px 0px;" data-stellar-background-ratio="0.5" class="animated">
+<section id="fh5co-home" data-section="home" style="background-image: url(images/Sesion1.JPG); background-position: 0px 0px;" data-stellar-background-ratio="0.5" class="animated">
   <div class="gradient"></div>
   <div class="container">
     <div class="text-wrap">
@@ -122,14 +122,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Abuelita.jpg)">
+          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Abuelita.JPG)">
             <div class="desc">
               <h3>Abuelita</h3>
               </div>
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Abuelo.jpg)">
+          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Abuelo.JPG)">
             <div class="desc">
               <h3>Abuelo</h3>
             </div>
@@ -143,21 +143,21 @@
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Einstein.jpg)">
+          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Einstein.JPG)">
             <div class="desc">
               <h3>Einstein</h3>
               
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/predator.jpg)">
+          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/predator.JPG)">
             <div class="desc">
               <h3>Predator</h3>
               </div>
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Audrey.jpg)">
+          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/Audrey.JPG)">
             <div class="desc">
               <h3>Audrey</h3>
             </div>
