--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
   </div>
 </header>
-<section id="fh5co-home" data-section="home" style="background-image: url(images/Sesion1.JPG); background-position: 0px 0px;" data-stellar-background-ratio="0.5" class="animated">
+<section id="fh5co-home" data-section="home" style="background-image: url(images/Sesion1.png); background-position: 0px 0px;" data-stellar-background-ratio="0.5" class="animated">
   <div class="gradient"></div>
   <div class="container">
     <div class="text-wrap">
