--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/predator.JPG)">
+          <div class="project-grid to-animate-2 bounceIn animated" style="background-image:url(images/predator.png)">
             <div class="desc">
               <h3>Predator</h3>
               </div>
